--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 PORT=3001
+MONGO_URI = mongodb+srv://tadeoparmi2001:tadeoparmi@cluster0.i8uvr1a.mongodb.net/development?retryWrites=true&w=majority&appName=MDW2025-dev
